add e2e structures
